# is_that_a_monad

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: fmap.hpp  functor.hpp  maybe.hpp  monad.hpp
src/: monads_demo.cpp
